# SDRPlusPlus

./: .gitignore  CMakeLists.txt  Claude.md  build-x411.sh  regen-x411-root.sh  run-x411-debug.sh  run-x411.sh
core/: CMakeLists.txt
core/src/dsp/: cufft_backend.cpp  cufft_backend.h
core/src/signal_path/: iq_frontend.cpp  iq_frontend.h
docs/superpowers/plans/: 2026-04-11-x411-source-module.md  2026-04-16-sdrpp-skill-and-clock-gui.md
docs/superpowers/specs/: 2026-04-16-sdrpp-skill-and-clock-gui-design.md
sink_modules/audio_sink/src/: main.cpp
source_modules/audio_source/src/: main.cpp
source_modules/x411_source/: CMakeLists.txt  sdrpp_config.template.json
source_modules/x411_source/proto/: capability_probe.py  query_rates.py  retune_test.py
source_modules/x411_source/src/: main.cpp
